<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="change_timetable_view">Change timetable view</string>
    <string name="calendar_preferences">Calendar</string>
    <string name="first_day_of_week">First day of the week</string>
    <string name="time_preferences">Schedule</string>
    <string name="show_classrooms">Show classrooms</string>
    <string name="classroom_showing_switch">Classroom showing switch</string>
    <string name="display_saturday">Display Saturday</string>
    <string name="saturday_display_switch">Saturday display switch</string>
    <string name="display_sunday">Display Sunday</string>
    <string name="sunday_display_switch">Sunday display switch</string>
    <string name="hour_format">Hour format</string>
    <string name="hour_format_value">Hour format value</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="twelve_hours">12 hours</string>
    <string name="twenty_four_hours">24 hours</string>
    <string name="configuration">Configuration</string>
    <string name="today">Today</string>
    <string name="add_schedule_scroll">Scroll for adding schedule</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="course">Course</string>
    <string name="color" translatable="false">Color</string>
    <string name="existing_courses">Select existing courses</string>
    <string name="classroom">Classroom</string>
    <string name="course_name_input">Course name input</string>
    <string name="switch_existing_courses">switch existing courses</string>
    <string name="select_course">Select a course</string>
    <string name="add_course">Add a new course</string>
    <string name="enter_course_name">Enter course name</string>
    <string name="hour_error">Start time is greater than or equal to end time</string>
    <string name="select_day">Select a day</string>
    <string name="tuesday">Tuesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="wednesday">Wednesday</string>
    <string name="saturday">Saturday</string>
    <string name="select_hour">Select time</string>
    <string name="add_schedule">Add schedule</string>
    <string name="repetition">Repetition</string>
    <string name="every_week">Every week</string>
    <string name="specific_date">Specific date</string>
    <string name="select_date">Select a date</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="schedule_configuration">Schedule configuration</string>
    <string name="new_schedule">New schedule</string>
    <string name="update_schedule">Update schedule</string>
    <string name="select_option">Select an option</string>
    <string name="delete_schedule">Do you want to delete the schedule?</string>
    <string name="cancel">Cancel</string>
    <string name="accept_dialog">Accept</string>
    <string name="permission_denied_show_notifications">Permission denied to show notifications</string>
    <string name="permission_denied_schedule_reminders">Permission denied to schedule reminders</string>
    <string name="sign_out">Sign out</string>
    <string name="mail">Mail</string>
    <string name="no_user">No user</string>
    <string name="no_schedules_this_day">No schedules for this day</string>
    <string name="loading_preferences">Loading preferences</string>
</resources>