<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/change_timetable_view"
        android:icon="@drawable/ic_view_list"
        android:title="@string/change_timetable_view"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/timetable_today"
        android:icon="@drawable/ic_today"
        android:title="@string/today"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/scheduleConfigurationFragment"
        android:title="@string/configuration"
        app:showAsAction="never"/>

    <item
        android:id="@+id/sign_out"
        android:title="@string/sign_out"
        app:showAsAction="never" />
</menu>