<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="bottomSheetDay"
            type="com.studentsapps.schedule.dialogs.ModalBottomSheetDay" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/Widget.Material3.BottomSheet.Modal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/select_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_day"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="@{() -> bottomSheetDay.goToRegisterScheduleFragment(1, monday)}"
                android:text="@string/monday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_day" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="@{() -> bottomSheetDay.goToRegisterScheduleFragment(2, tuesday)}"
                android:text="@string/tuesday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/monday" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="@{() -> bottomSheetDay.goToRegisterScheduleFragment(3, wednesday)}"
                android:text="@string/wednesday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tuesday" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="@{() -> bottomSheetDay.goToRegisterScheduleFragment(4, thursday)}"
                android:text="@string/thursday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wednesday" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="@{() -> bottomSheetDay.goToRegisterScheduleFragment(5, friday)}"
                android:text="@string/friday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/thursday" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="@{() -> bottomSheetDay.goToRegisterScheduleFragment(6, saturday)}"
                android:text="@string/saturday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/friday" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="@{() -> bottomSheetDay.goToRegisterScheduleFragment(7, sunday)}"
                android:text="@string/sunday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/saturday" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>