<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.studentsapps.schedule.viewmodels.ScheduleConfigurationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ScheduleConfigurationFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/calendar_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_preferences"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/container_for_first_day_of_the_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.setIsMondayFirstDayOfWeek()}"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calendar_preferences">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/first_day_of_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_day_of_week" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/first_day_of_week_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Monday" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/time_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_preferences"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_for_first_day_of_the_week" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/time_format_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:onClick="@{() -> viewModel.setIs12HoursFormat()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_preferences">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hour_format"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_format" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hour_format_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12 horas" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/display_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_saturday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_format_container" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/saturday_display_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/saturday_display_switch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/display_saturday" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/display_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_sunday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/saturday_display_switch" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sunday_display_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sunday_display_switch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/display_sunday" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>